# spaceracers

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
maps/: test.tmx
requests/: lobby.http
spacerace-client/: Cargo.toml
spacerace-client/src/: main.rs
spacerace-server/: Cargo.toml
spacerace-server/assets/maps/: aga.tmx  christchurch.tmx  starmap.tmx  test.tmx  testmap.tmx
spacerace-server/src/: app_state.rs  game_state.rs  graphics_plugin.rs  lobby_graphics_plugin.rs  main.rs  particle_effects.rs
spacerace-server/src/components/: mod.rs  player.rs  ship.rs
spacerace-server/src/control/: control_plugin.rs  mod.rs
spacerace-server/src/game_logic/: leaderboard.rs  mod.rs  server_state.rs
spacerace-server/src/map/: mod.rs
spacerace-server/src/network/: game_state_route.rs  lobby_route.rs  mod.rs  ship_control_route.rs
spacerace-server/src/physics/: drift_physics_plugin.rs
spacerace-server/src/tests/: mod.rs
src/: app.rs  app_state.rs  game_logic.rs  game_state.rs  graphics_plugin.rs  main.rs  map.rs  player.rs  routes.rs  ship.rs  telemetry.rs
src/components/: mod.rs  ship.rs
src/control/: control_plugin.rs  mod.rs
src/game_logic/: mod.rs
src/map/: mod.rs
src/network/: api.rs  game_state_route.rs  lobby_route.rs  mod.rs  routes.rs  ship_control_route.rs
src/physics/: drift_physics_plugin.rs  mod.rs
src/tests/: mod.rs
