[package]
name = "spacerace-server"
version = "0.1.0"
edition = "2021"

[features]
ui = ["bevy_rapier2d/debug-render-2d"]

[dependencies]
axum = { version = "0.7.9", features = ["macros", "matched-path", "tracing", "ws"] }
opentelemetry = "0.27.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = { version = "0.1.41" }
tracing-opentelemetry = { version = "0.28.0" }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt", "net", "tracing"] }
tower = "0.5.1"
hyper = "1.5.1"
http-body-util = "0.1.2"
http = "1.1.0"
mime = "0.3.17"
tracing-subscriber = { version = "0.3.19", features=["fmt", "env-filter", "json", "tracing-log"] }
bevy = { version = "0.14.2", features = ["wayland"] }
bevy_rapier2d = { version = "0.27.0", features = ["simd-stable", "parallel", "serde", "headless", "serde-serialize"] }
bevy-tokio-tasks = "0.14.0"
