[package]
name = "spacerace-server"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[features]
ui = ["bevy_rapier2d/debug-render-2d"]
wayland = ["bevy/wayland"]

[dependencies]
axum = { version = "0.7.9", features = ["macros", "matched-path", "tracing", "ws"] }
opentelemetry = "0.27.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tracing = { version = "0.1.41" }
tracing-opentelemetry = { version = "0.28" }
uuid = { version = "1.11", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt", "net", "tracing"] }
tower = "0.5.2"
hyper = "1.5.2"
http-body-util = "0.1.2"
http = "1.2"
mime = "0.3.17"
tracing-subscriber = { version = "0.3.19", features=["fmt", "env-filter", "json", "tracing-log"] }
bevy = { version = "0.15.0", features = [] }
bevy_rapier2d = { version = "0.28.0", features = ["simd-stable", "parallel", "serde", "headless", "serde-serialize"] }
bevy-tokio-tasks = { git = "https://github.com/foxzool/bevy-tokio-tasks.git", branch = "upgrade" }
anyhow = "1.0.95"
tiled = "0.13.0"
rand = "0.9.0"
bevy_hanabi = "0.14.0"
